# serverless-demo

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/worflows/: main.yml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
